# hamster-rs

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  bootstrap.toml  diesel.toml
hamster-api/: Cargo.toml
hamster-api/migrations/2019-04-04-040502_create_users/: up.sql
hamster-api/src/: error.rs  main.rs  prelude.rs  schema.rs
hamster-api/src/core/: error.rs  mod.rs  utils.rs
hamster-api/src/core/db/: database.rs  mod.rs
hamster-api/src/user/: api.rs  mod.rs  types.rs
hamster-db/: Cargo.toml
hamster-db/src/: database.rs  error.rs  lib.rs
migrations/2019-04-17-183104_init/: down.sql  up.sql
src/: bootstrap.rs  error.rs  main.rs  prelude.rs  schema.rs  test_helpers.rs  utils.rs
src/api/: auth.rs  groups.rs  mod.rs  users.rs
src/api/groups/: api.rs  mod.rs  types.rs
src/auth/: authentication.rs  middleware.rs  mod.rs  service.rs
src/bootstrap/: mod.rs
src/core/: error.rs  mod.rs
src/db/: database.rs  groups.rs  mod.rs  users.rs
src/db/groups/: mod.rs  pg.rs  types.rs
src/db/users/: pg.rs  types.rs
src/groups/: mod.rs  pg.rs  service.rs  types.rs
src/types/: mod.rs  users.rs
src/users/: pg.rs
