[package]
name = "hamster-db"
edition = "2018"
version = "0.0.0"
authors = ["yanhai <shimmly@live.cn>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Dokuro-YH/hamster-rs"

[dependencies]
derive_more = "0.14"
futures = "0.1"

r2d2 = "0.8"
diesel = { version = "1.4", features = ["r2d2", "uuid", "chrono", "numeric", "serde_json", "postgres"] }

actix-web = "1.0.0-alpha.4"
